@@ -30,6 +30,7 @@ export(runAbsoluteCN)
 export(segmentationCBS)
 export(segmentationPSCBS)
 export(setPriorVcf)
+export(setMappingBiasVcf)
 import(DNAcopy)
 import(IRanges)
 import(VariantAnnotation)
